<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shopwithme.MainActivity" >

    <TextView
        android:id="@+id/WelcomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="82dp" 
        android:text="@string/UserName"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <EditText
        android:id="@+id/UserNameTextbox"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/UserName"
        android:ems="10"
        android:hint="@string/type_username" />

     <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/UserNameTextbox"
        android:text="@string/Password"
        android:textAppearance="?android:attr/textAppearanceMedium" />   

    <EditText
        android:id="@+id/PasswordTextbox"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/Password"
        android:ems="10"
        android:hint="@string/type_password"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/LoginButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"   
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="70dp"
        android:text="@string/login" 
        android:onClick="Login"/>

    <Button
        android:id="@+id/SignUpButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="18dp"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/ForgetPasswordButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SignUpButton"
        android:layout_alignBottom="@+id/SignUpButton"
        android:layout_alignEnd="@+id/LoginButton"
        android:layout_marginEnd="16dp"
        android:text="@string/forget_password" />

</RelativeLayout>
